--- a/action.yml
+++ b/action.yml
@@ -60,11 +60,20 @@ runs:
       env:
         MANIFEST_TAGS: ${{ inputs.manifest-tags }}
         COMPRESSION_FORMATS: ${{ inputs.compression-formats }}
+        IMAGE: ${{ inputs.image }}
+      # outputs:
+      #   COMPRESSION_FORMAT_COUNT - The number of compression formats to push
+      #   COMPRESSION_TAG - The tag prefix to use when pushing compression-specific images
+      #   COMPRESSION_IMAGE_FULL - The full image reference to use when pushing compression-specific images
       run: |
         IFS=' ' read -r -a COMPRESSION_FORMATS <<< "${COMPRESSION_FORMATS}"
+        IFS=' ' read -r -a MANIFEST_TAGS <<< "${MANIFEST_TAGS}"
 
         # Output the number of compression formats to push
         echo "COMPRESSION_FORMAT_COUNT=${#COMPRESSION_FORMATS[@]}" >> $GITHUB_OUTPUT
+        echo "COMPRESSION_TAG=${MANIFEST_TAGS[0]}" >> $GITHUB_OUTPUT
+        echo "COMPRESSION_IMAGE_FULL=${IMAGE}:${MANIFEST_TAGS[0]}" >> $GITHUB_OUTPUT
+
 
     - name: Push Image (Single)
       if: steps.metadata.outputs.COMPRESSION_FORMAT_COUNT == 1
@@ -76,6 +85,8 @@ runs:
         IMAGE: ${{ inputs.image }}
         REGISTRY: ${{ inputs.registry }}
         COMPRESSION_FORMAT: ${{ inputs.compression-formats }}
+      # outputs:
+      #   DIGEST - The digest of the pushed image
       run: |
         IFS=' ' read -r -a manifest_tags <<< "${MANIFEST_TAGS}"
         for tag in "${manifest_tags[@]}"; do
@@ -85,6 +96,45 @@ runs:
         DIGEST=$(skopeo inspect docker://${REGISTRY}/${IMAGE}:${MANIFEST_TAGS} | jq -r '.Digest')
         echo "DIGEST=${DIGEST}" >> $GITHUB_ENV
 
+    - name: Tag Compressed Images (Multiple)
+      if: steps.metadata.outputs.COMPRESSION_FORMAT_COUNT > 1
+      id: tag-compressed
+      shell: bash
+      env:
+        LOCAL_IMAGE_REF: ${{ inputs.local-image-ref }}
+        COMPRESSION_TAG: ${{ steps.metadata.outputs.COMPRESSION_TAG }}
+        COMPRESSION_FORMATS: ${{ inputs.compression-formats }}
+        COMPRESSION_IMAGE_FULL: ${{ steps.metadata.outputs.COMPRESSION_IMAGE_FULL }}
+      # outputs:
+      #   SANITIZED_COMPRESSION_FORMATS - The sanitized compression format names
+      #   TAGGED_COMPRESSION_IMAGES - The tagged compression-specific image references
+      run:
+        IFS=' ' read -r -a compression_formats_array <<< "${COMPRESSION_FORMATS}"
+        sanitized_compression_formats=()
+        tagged_compression_images=()
+        for format in "${compression_formats_array[@]}"; do
+          sanitized_format=$(echo "${format}" | tr ':' '-')
+          sanitized_compression_formats+=("${sanitized_format}")
+
+          full_tag="${COMPRESSION_IMAEG_FULL}-${sanitized_format}"
+          echo "Tagging ${LOCAL_IMAGE_REF} as ${full_tag}..."
+          podman image tag "${LOCAL_IMAGE_REF}" "${full_tag}"
+          tagged_compression_images+=("${full_tag}")
+        done
+
+        echo "SANITIZED_COMPRESSION_FORMATS=${sanitized_compression_formats[*]}" >> $GITHUB_OUTPUT
+        echo "TAGGED_COMPRESSION_IMAGES=${tagged_compression_images[*]}" >> $GITHUB_OUTPUT
+
+    - name: Debug
+      if: steps.metadata.outputs.COMPRESSION_FORMAT_COUNT > 1
+      shell: bash
+      run: |
+        podman image ls
+        echo "SANITIZED_COMPRESSION_FORMATS=${{ steps.tag-compressed.outputs.SANITIZED_COMPRESSION_FORMATS }}"
+        echo "TAGGED_COMPRESSION_IMAGES=${{ steps.tag-compressed.outputs.TAGGED_COMPRESSION_IMAGES }}"
+        echo "COMPRESSION_FORMATS=${{ inputs.compression-formats }}"
+        echo "COMPRESSION_TAG=${{ steps.metadata.outputs.COMPRESSION_TAG }}"
+        echo "COMPRESSION_IMAGE_FULL=${{ steps.metadata.outputs.COMPRESSION_IMAGE_FULL }}"
 
     - name: Set Outputs
       id: set-outputs
