--- a/action.yml
+++ b/action.yml
@@ -109,21 +109,33 @@ runs:
       #   SANITIZED_COMPRESSION_FORMATS - The sanitized compression format names
       #   TAGGED_COMPRESSION_IMAGES - The tagged compression-specific image references
       run:
+        # Read the compression formats into an array
         IFS=' ' read -r -a compression_formats_array <<< "${COMPRESSION_FORMATS}"
+
+        # Initialize arrays for sanitized formats and tagged images
         sanitized_compression_formats=()
         tagged_compression_images=()
+
+        # Process each compression format
         for format in "${compression_formats_array[@]}"; do
+          # Sanitize the format by replacing ':' with '-'
           sanitized_format=$(echo "${format}" | tr ':' '-')
           sanitized_compression_formats+=("${sanitized_format}")
 
-          full_tag="${COMPRESSION_IMAEG_FULL}-${sanitized_format}"
+          # Create the full tag
+          full_tag="${COMPRESSION_IMAGE_FULL}-${sanitized_format}"
           echo "Tagging ${LOCAL_IMAGE_REF} as ${full_tag}..."
+
+          # Tag the image using podman
           podman image tag "${LOCAL_IMAGE_REF}" "${full_tag}"
           tagged_compression_images+=("${full_tag}")
         done
 
-        echo "SANITIZED_COMPRESSION_FORMATS=${sanitized_compression_formats[*]}" >> $GITHUB_OUTPUT
-        echo "TAGGED_COMPRESSION_IMAGES=${tagged_compression_images[*]}" >> $GITHUB_OUTPUT
+        sanitized_compression_formats_str=$(IFS=' '; echo "${sanitized_compression_formats[*]}")
+        tagged_compression_images_str=$(IFS=' '; echo "${tagged_compression_images[*]}")
+
+        echo "SANITIZED_COMPRESSION_FORMATS=${sanitized_compression_formats_str}" >> $GITHUB_OUTPUT
+        echo "TAGGED_COMPRESSION_IMAGES=${tagged_compression_images_str}" >> $GITHUB_OUTPUT
 
     - name: Debug
       if: steps.metadata.outputs.COMPRESSION_FORMAT_COUNT > 1
