hello-world doesn't have a shell, so use an alpine image to create a file

--- a/test/Containerfile
+++ b/test/Containerfile
@@ -1,5 +1,11 @@
+ARG BUILD_IDENTIFIER=""
+
+FROM docker.io/library/alpine:latest AS base
+
 ARG BUILD_IDENTIFIER
+
+RUN echo "BUILD_IDENTIFIER=${BUILD_IDENTIFIER}" > /etc/os-release
 
 FROM docker.io/library/hello-world:latest
 
-RUN echo "${BUILD_IDENTIFIER}" > /build-identifier.txt
+COPY --from=base /etc/os-release /etc/os-release
