--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Read Outputs
+        run: |
+          echo "Digest: ${{ steps.push.outputs.digest }}"
+          echo "Registry Path": ${{ steps.push.outputs.registry-path }}
+          echo "Registry Paths": ${{ steps.push.outputs.registry-paths }}
+
       - name: Inspect Image Manifest
         env:
           MANIFEST_TAG: ${{ github.sha }}-${{ github.run_number }}
@@ -83,6 +89,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           compression-formats: gzip zstd:chunked
+
+      - name: Read Outputs
+        run: |
+          echo "Digest: ${{ steps.push.outputs.digest }}"
+          echo "Registry Path": ${{ steps.push.outputs.registry-path }}
+          echo "Registry Paths": ${{ steps.push.outputs.registry-paths }}
 
       - name: Inspect Image Manifest
         env:
