--- a/action.yml
+++ b/action.yml
@@ -214,7 +214,7 @@ runs:
 
         for manifest_name in "${manifest_names_array[@]}"; do
           echo "Pushing manifest ${manifest_name}..."
-          ${GITHUB_ACTION_PATH}/helpers/retry.sh ${RETRIES} podman manifest push --all=false --format="${IMAGE_FORMAT}" ${manifest_name}
+          ${GITHUB_ACTION_PATH}/helpers/retry.sh ${RETRIES} podman manifest push --all=false --format="${IMAGE_FORMAT}" "${manifest_name}"
           manifest_digests+=($(skopeo inspect docker://${manifest_name} --format '{{.Digest}}'))
           registry_paths+=("${manifest_name}")
         done
